# empirical

./: .eslintrc.js  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  turbowatch.ts
.changeset/: angry-pets-fix.md  angry-planes-sin.md  beige-spoons-look.md  big-dodos-tickle.md  big-files-allow.md  blue-tips-attack.md  brave-forks-eat.md  brave-icons-breathe.md  bright-yaks-act.md  brown-clouds-hide.md  calm-seas-lick.md  clean-gifts-tap.md  clever-guests-appear.md  clever-wasps-raise.md  cold-kings-float.md  cool-planets-deliver.md  cool-plants-sit.md  cyan-moons-sit.md  dry-eggs-hang.md  fair-bottles-taste.md  fair-glasses-reflect.md  famous-tigers-notice.md  flat-dancers-build.md  flat-knives-eat.md  fluffy-peas-remember.md  forty-doors-travel.md  forty-hairs-jump.md  friendly-bikes-fix.md  friendly-timers-collect.md  funny-gorillas-sin.md  giant-taxis-end.md  gold-hounds-relate.md  good-falcons-applaud.md  good-spoons-own.md  gorgeous-pigs-tickle.md  great-cars-sit.md  grumpy-bugs-beg.md  happy-chefs-hear.md  hip-ghosts-hunt.md  hot-bananas-boil.md  (+53 more)
.github/workflows/: build.yml  (+6 more)
development/: README.md
docs/: README.md  configuration.mdx  examples.mdx  introduction.mdx  mint.json  package.json  pnpm-lock.yaml  quickstart.mdx  reporter.mdx  running-in-ci.mdx  telemetry.mdx
examples/cohere-llamaparse/: README.md  cohere-async.py  cohere.py  empiricalrc.json  pyproject.toml
examples/rag/: README.md  dataset.jsonl  dataset_generator.py  empiricalrc.json  prepare.py  pyproject.toml  rag.py  score.py
turbo/: package.json
(+138 files in other folders)
