[tool.poetry]
name = "cohere"
version = "0.1.0"
description = ""
authors = ["Arjun Attam <arjunattam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
